# ipc-example

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  run.sh
include/: grpc.h  ipc_base.h  shared_memory.h  ucx.h
proto/: CMakeLists.txt
src/: client.cpp  daemon.cpp  grpc.cpp  shared_memory.cpp  ucx.cpp
